# Mcp-server

./: .env.example  README.md  app.py  client1.py  config.yaml  config_loader.py  main.py  notebook.ipynb  pyproject.toml  server.py  test_server.py
